--- a/_posts/2018-01-17-clojurex2017.md
+++ b/_posts/2018-01-17-clojurex2017.md
@@ -21,9 +21,11 @@ Mastodon C data engineer[ Jason Bell](http://www.mastodonc.com/about/) [shares h
 
 [From a prototype in python to clojure in production](https://href.li/?https://skillsmatter.com/skillscasts/10940-clojure-for-data-science-from-a-prototype-in-python-to-clojure-in-production): this is an interesting use case of a big data text (topic) analysis pipeline.
 
-## Want to know some of the common traps and pitfalls in Clojure?
+## What are some of the common traps and pitfalls in Clojure?
 
 [Clojure Puzzlers](https://href.li/?https://skillsmatter.com/skillscasts/10937-clojure-puzzlers): a collection of weird and wondrous Clojure edge cases, worth a watch.
+
+<!--HubSpot Call-to-Action Code --><span class="hs-cta-wrapper" id="hs-cta-wrapper-2d5848d9-00d4-4807-8040-ee03471d6f27"><span class="hs-cta-node hs-cta-2d5848d9-00d4-4807-8040-ee03471d6f27" id="hs-cta-2d5848d9-00d4-4807-8040-ee03471d6f27"><!--[if lte IE 8]><div id="hs-cta-ie-element"></div><![endif]--><a href="https://cta-redirect.hubspot.com/cta/redirect/3461032/2d5848d9-00d4-4807-8040-ee03471d6f27"  target="_blank" ><img class="hs-cta-img" id="hs-cta-img-2d5848d9-00d4-4807-8040-ee03471d6f27" style="border-width:0px;" src="https://no-cache.hubspot.com/cta/default/3461032/2d5848d9-00d4-4807-8040-ee03471d6f27.png"  alt="Download a free checklist: Getting a Data Project Started"/></a><!-- end HubSpot Call-to-Action Code -->
 
 ## The next giant leap in Clojure’s reach
 
